# LearnOpenGL

./: CMakeLists.txt  README.md
res/shaders/: shader.vs
src/: application.cpp  index_buffer_object.cpp  index_buffer_object.h  shader.cpp  shader.h  util.cpp  util.h  vertex_array_object.cpp  vertex_array_object.h  vertex_buffer_object.cpp  vertex_buffer_object.h
